# studybuddy-rag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
scripts/: test_retrieval.py
src/studybuddy/: config.py  ingestion.py  llm.py  retrieval.py
